--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-toastify": "^10.0.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
-    "tailwindcss": "^3.4.9"
+    "tailwindcss": "^3.4.9",
+    "@stripe/react-stripe-js": "^5.3.0",
+		"@stripe/stripe-js": "^8.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
